<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Welcome to the Android shore store. here you can find all kinds of shores for your droids.</string>
    <string name="instructions">Instructions</string>
    <string name="view_shoes">View Shoes</string>
    <string name="add_shoe">Add shoe</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="shoe_detail">Shoe Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="company">Company</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="instructions_one">1. you can view shoe list in \"Shoe List\" screen</string>
    <string name="instructions_two">2. at \"Shoe List\" screen, click the floating action button to open a \"Shoe Detail\" screen to add a new shoe to the list.</string>
    <string name="instructions_three">3. at \"Shoe List\" screen you can click \"logout\" menu to go back to the \"Login\" screen.</string>
</resources>
